Fix height issues in collapsed menu

--- a/app/styles/_toolbar.scss
+++ b/app/styles/_toolbar.scss
@@ -19,7 +19,6 @@
     opacity: 1;
 
     >div, >ul {
-      height: $topbar-height;
       margin-top: 0;
       margin-bottom: 0;
     }
